--- a/index.html
+++ b/index.html
@@ -53,17 +53,18 @@
             <div class="banner">
                 <button>배너존</button>
                 <div class="box2">
-
+                    <img src="images/b1.jpg" alt="">
 
                 </div>
 
             </div>
             <div class="shortcut">
                 <button>바로가기</button>
-                <div class="box3">
-
-
-                </div>
+                <ul class="box3">
+                    <li><img src="images/sub1.jpg" alt=""></li>
+                    <li><img src="images/sub2.jpg" alt=""></li>
+                    <li><img src="images/sub3.jpg" alt=""></li>
+                </ul>
 
             </div>
 
@@ -73,7 +74,21 @@
 
         <!-- D영역 -->
         <div class="footer">
+            <div class="logo2">
+                <img src="images/logo2.png" alt="">
+            </div>
 
+            <div class="copy">
+                전화번호 : 031-218-4100 사업자등록번호 : 092380682-2592 대표자 : 김태근
+                <br>
+                Copyright(c) 2025 JUST SHOP. All rights reserved.
+            </div>
+
+            <ul class="sns">
+                <li><img src="images/blog.png" alt=""></li>
+                <li><img src="images/face.png" alt=""></li>
+                <li><img src="images/insta.png" alt=""></li>
+            </ul>
         </div>
 
 
